# FunProjects

./: .gitignore  README.md
calculator/: CMakeLists.txt  main.cpp
calculator/include/: CMakeLists.txt  calc.cpp  calc.h
projectileMotion/: CMakeLists.txt  README.md  main.cpp
projectileMotion/include/: CMakeLists.txt  pmFunc.cpp  pmFunc.h
